# ContemporaryCpp

./: CMakeLists.txt  CMakePresets.json  README.md  asio.h  c_ressource.h  common.h  console.h  gui.h  main.cpp  net.h  server.h  vcpkg.json  video.h  videodecoder.h  videoframe.h
